@@ -1,3 +1,9 @@
+2015-04-14 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.h
+	* DBSoap.m
+	Provide isBusy to determine if any of the queries are running, protect all public APIs with a lock and call the equivalent internal unprotected ones.
+
 2015-01-21 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m (identifyObjectById) Use keyPrefix accessor, do not
